[package]
name = "boot"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
console = { path = "../lib/console" }
mutex = { path = "../lib/mutex" }
pi = { path = "../lib/pi" }
volatile = { path = "../lib/volatile" }
shim = { path = "../lib/shim", features = ["no_std"] }
xmodem = { path = "../lib/xmodem", features = ["no_std"] }


[features]
default = ["no_std"]
no_std = ["shim/no_std"]
