[package]
name = "kern"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
mutex = { path = "../lib/mutex" }
pi = { path = "../lib/pi" }
shim = { path = "../lib/shim", features = ["no_std"] }
stack-vec = { path = "../lib/stack-vec" }
volatile = { path = "../lib/volatile" }
